kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-app-deployment
  labels:
    app: flask
spec:
  selector:
    matchLabels:
      app: flask-app
  replicas: 2
  template:
    metadata:
      name: flask-app
      labels:
        app: flask-app
    spec:
      containers:
        - name: flask-app
          image: virajdalave/flask-app:latest
          ports:
            - containerPort: 5000
