kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app-service
  labels:
    app: flask
spec:
  type: ClusterIP
  selector:
    app: flask-app
  ports:
    - port: 5000
      targetPort: 5000
