kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: bettrsw.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: flask-app-service
                port:
                  number: 5000
